apps/overseerr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: overseerr-deployment
  labels:
    app: overseerr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: overseerr
  template:
    metadata:
      labels:
        app: overseerr
    spec:
      containers:
      - name: overseerr
        image: sctx/overseerr
        ports:
        - containerPort: 5055
        volumeMounts:
        - mountPath: "/app/config"
          name: appconfig
      volumes:
      - name: appconfig
        csi:
          driver: file.csi.azure.com
          readOnly: false
          volumeAttributes:
            secretName: overseerr-acct
            shareName: appconfig
