apps/mariadb.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: rocket-stats-db-statefulset
  namespace: rocket
  labels:
    app: rocket-stats-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rocket-stats-db
  serviceName: rocket-stats-db
  template:
    metadata:
      labels:
        app: rocket-stats-db
    spec:
      containers:
      - name: rocket-stats-db
        image: mariadb:11.1.3
        # resources:
        #   requests:
        #     memory: "200Mi"
        #     cpu: "50m"
        #   limits:
        #     memory: "400Mi"
        #     cpu: "200m"
        ports:
        - containerPort: 3306
        volumeMounts:
        - mountPath: "/var/lib/mysql"
          name: rocket-stats-db-pvc
  volumeClaimTemplates:
  - metadata:
      name: rocket-stats-db-pvc
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 5Gi
      storageClassName: local-path
---
apiVersion: v1
kind: Service
metadata:
  name: rocket-stats-db-svc
  namespace: rocket
  labels:
    app: rocket-stats-db
spec:
  type: ClusterIP
  selector:
    app: rocket-stats-db
  ports:
  - port: 3306
    targetPort: 3306
    protocol: TCP
