apps/tautulli.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: tautulli-statefulset
  namespace: plex
  labels:
    app: tautulli
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tautulli
  serviceName: tautulli
  template:
    metadata:
      labels:
        app: tautulli
    spec:
      containers:
      - name: tautulli
        image: ghcr.io/tautulli/tautulli
        resources:
          requests:
            memory: "200Mi"
            cpu: "50m"
          limits:
            memory: "400Mi"
            cpu: "200m"
        ports:
        - containerPort: 8181
        volumeMounts:
        - mountPath: "/config"
          name: tautulli-pvc
  volumeClaimTemplates:
  - metadata:
      name: tautulli-pvc
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 1Gi
      storageClassName: local-path
---
apiVersion: v1
kind: Service
metadata:
  name: tautulli-svc
  namespace: plex
  labels:
    app: tautulli
spec:
  type: ClusterIP
  selector:
    app: tautulli
  ports:
  - port: 80
    targetPort: 8181
    protocol: TCP
