apps/dont-starve-server-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dont-starve-ingress
  namespace: games
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: 97.115.104.123
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dont-starve-svc
                port:
                  number: 10999
    - host: 97.115.104.123
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dont-starve-svc
                port:
                  number: 11000
    - host: 97.115.104.123
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dont-starve-svc
                port:
                  number: 12346
    - host: 97.115.104.123
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dont-starve-svc
                port:
                  number: 12347
