apps/ombi.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ombi
  labels:
    name: ombi
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ombi-statefulset
  namespace: ombi
  labels:
    app: ombi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ombi
  template:
    metadata:
      labels:
        app: ombi
    spec:
      containers:
      - name: ombi
        image: linuxserver/ombi
        ports:
        - containerPort: 3579
        volumeMounts:
        - mountPath: "/config"
          name: ombi-pvc
  volumeClaimTemplates:
  - metadata:
      name: ombi-pvc
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 5Gi
      storageClassName: do-block-storage
---
apiVersion: v1
kind: Service
metadata:
  name: ombi-service
  namespace: ombi
  labels:
    app: ombi
spec:
  type: ClusterIP
  selector:
    app: ombi
  ports:
  - port: 80
    targetPort: 3579
    protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ombi-ingress
  namespace: ombi
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
      - ombi.freeceweed.com
      secretName: letsencrypt-prod
  rules:
    - host: ombi.freeceweed.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ombi-service
                port:
                  number: 80
