apps/overseerr-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: overseerr-ingress
  namespace: plex
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    acme.cert-manager.io/http01-edit-in-place: "true"
    # nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
spec:
  tls:
    - hosts:
        - requests.banick.tv
      secretName: overseerr-tls
  rules:
    - host: requests.banick.tv
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: overseerr-svc
                port:
                  number: 80
