apps/tautulli-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tautulli-ingress
  namespace: plex
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    acme.cert-manager.io/http01-edit-in-place: "true"
spec:
  tls:
    - hosts:
      - www.dashboard.banick.tv
      secretName: tautulli-tls
  rules:
    - host: www.dashboard.banick.tv
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tautulli-svc
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tautulli-ingress-redirects
  namespace: plex
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    acme.cert-manager.io/http01-edit-in-place: "true"
    nginx.ingress.kubernetes.io/rewrite-target: "https://www.dashboard.banick.tv/$1"
spec:
  tls:
    - hosts:
      - dashboard.banick.tv
      secretName: tautulli-tls
  rules:
    - host: dashboard.banick.tv
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tautulli-svc
                port:
                  number: 80
